--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -193,4 +193,5 @@
 \newacronym{ma}{mA}{milliampere}
 \newacronym{ttl}{TTL}{Transistor-Transistor Logic}
 \newacronym{lcd}{LCD}{Liquid Crystal Display}
+\newacronym{csv}{CSV}{Comma Separated Values}
 % ========================== END ======================
