--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -7266,3 +7266,226 @@ make -j$(nproc) #
 #+END_SRC
 ** Design UI for Local System
 ** Setup for cross-compilation and deployment for Raspberry
+* CMake
+- [[https://gitlab.kitware.com/cmake/community/-/wikis/doc/cmake/CrossCompiling][Cross compilation]]
+* OpenCV
+*Examples* [4/4]:
+1) [X] [[file:code/computer-vision/test-opencv/display_img.cpp][display_img.cpp]] (src):
+   1) About: displays an image on screen
+   2) Status: compiled but did not run, cuz its required to
+       set up the path for samples (see [[https://forum.opencv.org/t/why-does-the-tutorial-code-from-opencv-give-unspecified-error/5104/3][here]])
+2) [X] [[file:code/computer-vision/test-opencv/basic-draw/src/basic_draw.cpp][basic_draw.cpp]] ([[https://docs.opencv.org/4.x/d3/d96/tutorial_basic_geometric_drawing.html][src]]):
+   1) About: draws basic shapes on screen
+   2) Status: compiled and runned successfully
+3) [X] [[file:code/computer-vision/test-opencv/find-contours/src/find_contours.cpp][find_contours.cpp]] ([[https://docs.opencv.org/4.x/df/d0d/tutorial_find_contours.html][src]]):
+   1) About: finds contours on a image
+   2) Status: compiled but did not run, cuz of the same
+4) [X] [[file:code/computer-vision/test-opencv/cmake-example/example.cpp][example.cpp]] ([[https://github.com/opencv/opencv/tree/master/samples/cpp/example_cmake][src]]):
+   1) About: Grabs frames from the camera and adds text to it
+   2) Status: compiled and runned successfully
+
+** Build and integrate with Qt5
+[[https://lordsoftech.com/open-source/adding-opencv-libraries-to-a-qt5-project-in-ubuntu-20-04/][src]]
+*** ✔ DONE Build opencv [7/7]
+    :LOGBOOK:
+    - State "✔ DONE"     from              [2021-12-31 sex 01:54]
+    :END:
+1) [X] Install dependencies ([[https://www.itsfoss.net/how-to-install-and-configure-opencv-on-ubuntu-20-04/][src]])
+   #+BEGIN_SRC bash
+sudo apt install build-essential cmake git pkg-config libgtk- 3 -dev libavcodec-dev libavformat-dev libswscale-dev libv4l-dev libxvidcore-dev libx264-dev libjpeg-dev libpng-dev libtiff-dev gfortran openexr libatlas-base-dev python3-dev python3-numpy libtbb2 libtbb-dev libdc1394- 22 -dev
+   #+END_SRC
+2) [X] Clone the repository containing the last release and create a build
+   folder
+   #+BEGIN_SRC bash
+mkdir ~/opencv_build && cd ~/opencv_build
+git clone https://github.com/opencv/opencv.git && git clone https://github.com/opencv/opencv_contrib.git
+cd opencv && mkdir build && cd build
+   #+END_SRC
+3) [X] Set the flags
+   1) WORK: it compiled
+	 #+BEGIN_SRC bash
+	 cmake -D CMAKE_BUILD_TYPE=RELEASE \ -D CMAKE_INSTALL_PREFIX=/usr/local \ -D INSTALL_PYTHON_EXAMPLES=ON \ -D BUILD_EXAMPLES=ON \ -D OPENCV_GENERATE_PKGCONFIG=ON \ -D OPENCV_EXTRA_MODULES_PATH=~/opencv_build/opencv_contrib/modules \ -D INSTALL_C_EXAMPLES=ON  .. 
+	 #+END_SRC
+   2) WORK: failed to compile after
+	#+BEGIN_SRC bash
+	cmake -D CMAKE_BUILD_TYPE=RELEASE \ -D CMAKE_INSTALL_PREFIX=/usr/local \ -D INSTALL_PYTHON_EXAMPLES=ON \ -D BUILD_EXAMPLES=ON \ -D OPENCV_GENERATE_PKGCONFIG=ON \ -D OPENCV_EXTRA_MODULES_PATH=~/opencv_build/opencv_contrib/modules \ -D INSTALL_C_EXAMPLES=ON -D OPENCV_ENABLE_NONFREE=ON -D CMAKE_C_compiler=gcc -D CMAKE_C++_compiler=g++ -D WITH_QT=ON -D BUILD_PROTOBUF=OFF -D WITH_LAPACK=OFF -D WITH_VTK=OFF -D BUILD_opencv_viz=OFF .. 
+	#+END_SRC
+4) [X] Compile it: it may take a while
+   #+BEGIN_SRC bash
+   make -j$((`nproc`-1))
+   #+END_SRC
+5) [X] Install
+   #+BEGIN_SRC bash
+   sudo make install 
+   #+END_SRC
+6) [X] Check installation ([[https://medium.com/@pokhrelsuruchi/setting-up-opencv-for-python-and-c-in-ubuntu-20-04-6b0331e37437][src]])
+   #+BEGIN_SRC bash
+   ls /usr/local/lib
+   #+END_SRC
+   If the terminal shows list of files =libopencv*=, then the installation went
+   successfully
+7) [X] Configuring paths to link libraries and include directories ([[https://medium.com/@pokhrelsuruchi/setting-up-opencv-for-python-and-c-in-ubuntu-20-04-6b0331e37437][src]]):
+   1) For the new opencv4, the file path for the actual installation and that
+      which is mentioned in the header files is different. This is the reason
+      why despite following all the proper steps of installation, your project
+      will not execute due to library linking errors. The following command
+      should be entered in order to fix this issue.
+      #+BEGIN_SRC bash
+      sudo ln -s /usr/local/include/opencv4/opencv2 /usr/local/include/opencv2
+      #+END_SRC
+   2) For linking the “.so” libraries, we create a new directory named opencv2
+      at /usr/local/lib and move all the .so files relating to the opencv at the
+      ~/build/lib to /usr/local/lib/opencv2.
+      #+BEGIN_SRC bash
+      sudo mkdir /usr/local/lib/opencv2
+      sudo cp ~/build/lib /usr/local/lib/opencv2
+      #+END_SRC
+*** ✔ DONE Compile a simple standlone project
+    :LOGBOOK:
+    - State "✔ DONE"     from              [2021-12-31 sex 01:54]
+    :END:
+**** ✔ DONE Makefile [3/3]
+     :LOGBOOK:
+     - State "✔ DONE"     from              [2021-12-31 sex 01:54]
+     :END:
+ 1) [X] [[file:code/computer-vision/test-opencv/src/makefile][create a makefile]]: it must define =INC= and =LIBS=
+    #+BEGIN_SRC makefile
+     INC=-I/usr/local/include/opencv4
+     LIBS += -L/usr/local/lib -lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_objdetect -lopencv_imgcodecs -lopencv_videoio -lopencv_features2d
+     #+END_SRC
+ 2) [X] run =bear make= to obtain the =compile_commands.json= and setup the LSP
+    mode helper
+ 3) [X] Run sample codes [3/3]
+    1) [X] [[file:code/computer-vision/test-opencv/display_img.cpp][display_img.cpp]] (src): compiled but did not run, cuz its required to
+       set up the path for samples (see [[https://forum.opencv.org/t/why-does-the-tutorial-code-from-opencv-give-unspecified-error/5104/3][here]])
+    2) [X] [[file:code/computer-vision/test-opencv/basic-draw/src/basic_draw.cpp][basic_draw.cpp]] ([[https://docs.opencv.org/4.x/d3/d96/tutorial_basic_geometric_drawing.html][src]]): compiled and runned successfully
+    3) [X] [[file:code/computer-vision/test-opencv/find-contours/src/find_contours.cpp][find_contours.cpp]] ([[https://docs.opencv.org/4.x/df/d0d/tutorial_find_contours.html][src]]): compiled but did not run, cuz of the same
+       problem of 1)
+**** ✔ DONE Cmake
+     :LOGBOOK:
+     - State "✔ DONE"     from              [2021-12-31 sex 01:48]
+     :END:
+1) [X] create a =CMakeLists.txt= file
+   1) [[https://github.com/opencv/opencv/blob/master/samples/cpp/example_cmake/CMakeLists.txt][src]]
+   2) [[file:code/computer-vision/test-opencv/cmake-example/CMakeLists.txt][example]]
+2) [X] create a build dir and navigate there
+   #+BEGIN_SRC bash
+   mkdir build && cd build
+   #+END_SRC
+3) [X] run cmake with the following flag:
+   #+BEGIN_SRC bash
+   cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=1 ..
+    #+END_SRC
+   - It generates the =compile_commands.json= file for LSP and the =makefile=
+4) [X] Run make
+   #+BEGIN_SRC bash
+   make 
+   #+END_SRC
+5) [X] Run executable
+   #+END_SRC
+*** ✔ DONE Integrate with Qt [6/6]
+    :LOGBOOK:
+    - State "✔ DONE"     from              [2021-12-31 sex 03:19]
+    :END:
+1) [X] [[file:code/computer-vision/qt-test][Create a Qt Widget project]]
+   1) Add a button
+   2) Implement =on_button_pressed= event handler to open the camera and overlay
+      text (see [[file:code/computer-vision/test-opencv/cmake-example/example.cpp][example.cpp]])
+2) [X] Add this to qtcreator =.pro= file
+   #+BEGIN_SRC c
+INCLUDEPATH += /usr/local/include/opencv4
+
+LIBS += -L/usr/local/lib -lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_objdetect -lopencv_imgcodecs -lopencv_videoio
+   #+END_SRC
+3) [X] Use the build system to externally to obtain a makefile: [[id:7e7c3a09-af4f-4395-a7f8-681dab1b95c1][see Qt workflow]]
+4) [X] Generate =compile_commands.json= for LSP integration [0/0]: [[id:7e7c3a09-af4f-4395-a7f8-681dab1b95c1][see Qt
+   workflow]]
+5) [X] Run make
+6) [X] Check the application output
+   1) A GTK window should be generated when the push button is pressed
+
+* Mine                                                             :noexport:
+** Implementation
+*** Notes
+- Qt app is build with =qmake= for now
+  - Maybe it will be better to use cmake for integration with opencv and other
+    external libraries
+*** Local System [0/2]
+ 1) [ ] ~HW~ [0/3]
+    1) [ ] Tests [0/6]:
+       1) [ ] Power Supply
+       2) [ ] LCD Display
+       3) [ ] Speakers
+       4) [ ] Fragrance diffuser
+       5) [ ] Camera
+       6) [ ] Ultrasonic sensor
+    2) [ ] Mechanical design
+    3) [ ] PCB manufacturing
+ 2) [ ] SW: implementation [0/2]
+    1) [ ] Linux & Raspbian tests [0/8]
+       1) [ ] *UI*
+	  1) [ ] Design the UI, populating with items, by phases:
+	     1) Initial view: Login + Register
+	     2) Main view: only if Login was successful
+       2) [ ] *Sockets & Client/Server Arch* [0/3]
+	  1) [ ] Connect
+	  2) [ ] Send
+	  3) [ ] Recv
+       3) [ ] *Computer Vision* [0/4]
+	  1) [ ] *Frame grabbing*
+	  2) [ ] *Face detection*
+	  3) [ ] *Gesture recognition*
+	     1) [ ] Determine set of gestures required
+	     2) [ ] Create database of gestures
+	  4) [ ] /Image filter overlay/
+       4) [ ] /Normal mode/ [0/3]
+	  1) [ ] *Video reproduction*
+	  2) [ ] *Audio reproduction*
+	  3) [ ] /Fragrance diffusion/ [0/2]
+	     1) [ ] Device driver
+	     2) [ ] Daemon
+       5) [ ] /User detection/
+	  1) [ ] /Device driver/
+	  2) [ ] /Daemon/
+       6) [ ] /Twitter sharing/
+	  1) [ ] Create post
+	  2) [ ] Share
+	  3) [ ] Handle response
+       7) [ ] ~GIF generator~
+       8) [ ] ~File transfer~
+    2) [ ] Raspberry Pi deployment [0/3]
+       1) [ ] Buildroot customization
+       2) [ ] Startup/Shutdown sequence
+       3) [ ] System verification
+
+ _Legend_:
+ - *Top priority*
+ - /Medium priority/
+ - ~Low priority~
+*** Qt [0/3]
+    :PROPERTIES:
+    :ID:       7e7c3a09-af4f-4395-a7f8-681dab1b95c1
+    :END:
+1) [ ] Start a QWidget application on Qt
+2) [ ] Use the build system to externally to obtain a makefile [0/2]
+   1) [ ] =qmake=
+       #+BEGIN_SRC bash
+       cd /path/to/project
+       qmake -project # if the project is not yet created, otherwise
+       qmake -makefile
+       make -j$(nproc) #
+       #+END_SRC
+   2) [ ] =cmake=
+3) [ ] Generate =compile_commands.json= for LSP integration [0/2]
+   1) [ ] Cmake-based projects: If your project builds with CMake, it can
+      generate this file. You should enable it with:
+     #+BEGIN_SRC bash
+     cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=1
+     #+END_SRC
+     compile_commands.json will be written to your build directory. 
+     You should symlink it (or simply copy it) to the root of your
+     source tree, if they are different.
+   2) [ ] other build systems, using =bear=: For a make-based build, you can 
+      1) =make clean=;
+      2) =bear -- make=: to generate the file (and run a clean build!).
+	 1) if it is an older copy of bear, [[https://github.com/rizsotto/Bear/issues/304#issuecomment-703194531][use]]: =bear make=
